# IELTS-Speaking-Draw-Helper

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  qt.natvis
forms/: ui_mainwindow.h
include/: mainwindow.h
resources/: mainwindow.qrc
sources/: mainwindow.cpp
